[gd_scene load_steps=3 format=3 uid="uid://k4yyrxwgqmix"]

[ext_resource type="Script" uid="uid://dvau4okb26i4c" path="res://Scripts/UnitInfoPanel.gd" id="1_12irq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12irq"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.666667)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="UnitInfoPanel" type="Control"]
layout_mode = 3
anchor_left = 0.1
anchor_top = 1.0
anchor_right = 0.9
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_12irq")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
offset_left = 417.8
offset_top = -8.0
offset_right = 517.8
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_12irq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="HpLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="ArmorLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="MpLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="ApLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
